<resources>
    <string name="app_name">WarmUpApp</string>
    <string name="generate_random">Generate Random</string>
    <string name="set_warm_up_max_time">Set warm up max time</string>
    <string name="welcome">Welcome</string>
    <string name="logo">logo</string>
    <string name="warm_up_name">Name</string>
    <string name="warm_up_type">Type</string>
    <string name="warm_up_time">Time (min)</string>
    <string name="warm_up_exercises">Exercises</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="warm_up">Warm Up</string>
    <string name="all">All</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="failLogin">Login failed</string>
    <string name="successLogin">Login successful</string>
    <string name="enterEmail">Enter email</string>
    <string name="enterPassword">Enter password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="failRegister">Register failed</string>
    <string name="successRegister">Register successful</string>
    <string name="enterName">Enter Name</string>
    <string name="matchPassword">Passwords do not match</string>
    <string name="password_reset_instructions">We just need your registered email to send you password reset instructions.</string>
    <string name="reset_password">Reset Password</string>
    <string name="sent_email_recover">We have sent you instructions to reset your password</string>
    <string name="fail_email_recover">Failed to send reset email</string>
    <string name="successSignOut">Sign out successful</string>
    <string name="new_warm_up">new_warm_up</string>
    <string name="warm_up_addition_successful">Warm Up added successfully</string>
    <string name="error_adding_warm_up">Error adding Warm Up</string>
    <string name="submit">Submit</string>
    <string name="error_getting_numWarmUps">Error getting numWarmUps</string>
    <string name="error_getting_documents">Error getting documents</string>
    <string name="performAction">What action do you want to perform with this Warm Up?</string>
    <string name="favorite">Predefine as favorite</string>
    <string name="deleteFromList">Delete from list</string>
    <string name="cancelElimination">Cancel</string>
    <string name="warm_up_deleted_successful">Warm Up deleted successfully</string>
    <string name="add_new_warm_up">Warm Up list is empty. Add new warm-up.</string>
    <string name="head">HEAD</string>
    <string name="settings">Settings</string>
    <string name="delete_account">Delete account</string>
    <string name="are_you_sure_that_you_want_to_delete_your_account">Are you sure that you want to delete your account?</string>
    <string name="no_return_to_homepage">No, return to homepage.</string>
    <string name="yes_delete_account">Yes, delete account.</string>
    <string name="userDeleted">User account deleted</string>
    <string name="error_name">Error in reading name</string>
    <string name="account">Account</string>
    <string name="change_username">Change username</string>
    <string name="reset_password_settings">Reset password</string>
</resources>