<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <ImageView
            android:id="@+id/iconHistory"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/logo"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/warm_up_name"
                android:textStyle="bold"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/typeHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/warm_up_type"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/timeHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/warm_up_time"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:textSize="16sp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>